prevent explicitlyGlobal import identifiers for namespace alias declaration, fixes assert

BUG: 263532